--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "export": "next export"
     },
     "dependencies": {
+        "firebase": "^6.3.0",
         "next": "^9.0.1",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
